fix(console): page content should not jump on scrollbar present (#1306)

--- a/packages/console/src/components/AppContent/index.module.scss
+++ b/packages/console/src/components/AppContent/index.module.scss
@@ -18,7 +18,7 @@
 .main {
   flex-grow: 1;
   padding-right: _.unit(6);
-  overflow-y: auto;
+  overflow-y: scroll;
 
   > * {
     @include _.main-content-width;
