--- a/packages/console/src/pages/SignInExperience/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/index.module.scss
@@ -10,7 +10,7 @@
     flex: 1;
     margin-right: _.unit(3);
     height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
 
     .tabs {
       padding-top: _.unit(2);
